data/all_generated_tests/raw_wast_tests/call_IncorrectConditionEvaluation_3512.wast
;; Sure, here are 10 unique differential test descriptions that target the differences in the code implementation for the `call` instruction focused on Incorrect Condition Evaluation, particularly in the context of stack operations and conditional branches:  1. A function call that relies on a `br_if` condition to either push a value on the stack or pop one, verifying if the `br_if` condition is evaluated correctly and stack operations are managed properly.

(assert_invalid
  (module
    (func $incorrect-condition-eval
      (i32.const 1)
      (br_if 0 (call 1))
    )
    (func (result i32))
  )
  "type mismatch"
)